--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -106,19 +106,11 @@ header {
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: all 0.3s ease 0s;
 
         a {
-            color: $white;
-            font-size: 1.4rem;
-
             &:nth-child(2) {
                 padding-right: 1rem;
                 padding-left: 0.5rem;
-            }
-
-            &:hover {
-                color: $yellow;
             }
         }
 
@@ -151,6 +143,52 @@ header {
                 color: $white;
             }
         }
+    }
+}
+
+.header-bottom {
+    background-color: $blue;
+    height: 5rem;
+    padding: 0 5rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .navbar {
+        ul {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 4rem;
+
+            li {
+                display: flex;
+                align-items: center;
+                gap: 0.8rem;
+                cursor: pointer;
+
+                a {
+                    color: $white;
+                    font-size: 1.4rem;
+                }
+            }
+        }
+    }
+
+    .links {
+        display: flex;
+        gap: 20px;
+    }
+}
+
+.link-header {
+    color: $white;
+    font-size: 1.4rem;
+    transition: all 0.3s ease 0s;
+
+    &:hover {
+        color: $yellow;
     }
 }
 
