--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -155,30 +155,80 @@ header {
     align-items: center;
     justify-content: space-between;
 
-    .navbar {
-        ul {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 4rem;
-
-            li {
-                display: flex;
-                align-items: center;
-                gap: 0.8rem;
-                cursor: pointer;
-
-                a {
-                    color: $white;
-                    font-size: 1.4rem;
-                }
-            }
-        }
-    }
-
     .links {
         display: flex;
         gap: 20px;
+    }
+}
+
+.navbar {
+    ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 4rem;
+
+        li {
+            display: flex;
+            align-items: center;
+            gap: 0.8rem;
+            cursor: pointer;
+            position: relative;
+
+            .dropdown-menu:before {
+                content: "";
+                position: absolute;
+                width: 1.4rem;
+                height: 1.4rem;
+                background-color: $white;
+                top: -0.1rem;
+                transform: rotate(-45deg);
+            }
+
+            .dropdown-menu {
+                position: absolute;
+                bottom: 0;
+                width: 20rem;
+                background-color: #fff;
+                padding: 1rem;
+
+                box-sizing: border-box;
+                border-radius: 0.4rem;
+                visibility: hidden;
+                opacity: 0;
+                transition: 0.5s;
+                transform: translateX(0%) translateY(105%);
+
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 25%);
+            }
+
+            .dropdown-item {
+                color: $black;
+                background-color: $white;
+                padding: 8px 15px;
+                border-radius: 4px;
+
+                transition: all 0.3s ease 0s;
+
+                &:hover {
+                    background-color: rgba(0, 149, 218, 10%);
+                    color: $lightblue;
+                }
+            }
+
+            &:hover .dropdown-menu {
+                visibility: visible;
+                opacity: 1;
+            }
+
+            a {
+                color: $white;
+                font-size: 1.4rem;
+            }
+        }
     }
 }
 
