--- a/sass/_patterns.scss
+++ b/sass/_patterns.scss
@@ -20,3 +20,37 @@
         text-align: center;
     }
 }
+
+.card-news {
+    width: 100%;
+    max-width: 30.5rem;
+    box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
+    border-radius: 0.4rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    transition: all 0.3s ease 0s;
+
+    &:hover {
+        transform: scale(1.1);
+
+        .title-news {
+            color: $blue;
+        }
+    }
+
+    .img-news {
+        max-width: 30.5rem;
+    }
+
+    .title-news {
+        text-align: center;
+        padding: 1rem 0.5rem;
+        font-size: 1.4rem;
+        font-weight: 500;
+        color: $black;
+    }
+}
