--- a/sass/_patterns.scss
+++ b/sass/_patterns.scss
@@ -1,5 +1,9 @@
 @import "colors";
 
+main {
+    padding-bottom: 4rem;
+}
+
 .title {
     width: 100%;
     display: flex;
@@ -44,6 +48,7 @@
 
     .img-news {
         max-width: 30.5rem;
+        object-fit: cover;
     }
 
     .title-news {
@@ -52,5 +57,100 @@
         font-size: 1.4rem;
         font-weight: 500;
         color: $black;
+    }
+}
+
+.card-especial {
+    margin: 5rem 0;
+    width: 100%;
+    max-width: 30.2rem;
+    box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
+    border-radius: 0.4rem;
+
+    display: flex;
+    flex-direction: column;
+    transition: all 0.3s ease 0s;
+
+    &:hover {
+        transform: scale(1.1);
+
+        .card-especial-content .card-especial-title {
+            color: $blue;
+        }
+    }
+
+    .card-especial-header {
+        display: flex;
+        flex-direction: column;
+
+        .img-especial {
+            max-width: 30.2rem;
+            max-height: 16rem;
+            object-fit: cover;
+            border-top-left-radius: 0.4rem;
+            border-top-right-radius: 0.4rem;
+        }
+
+        div {
+            margin: 0.9rem 1.1rem;
+            padding-bottom: 0.9rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            border-bottom: 1px solid rgba(138, 138, 138, 23%);
+
+            .card-tag {
+                background-color: rgba(0, 91, 158, 78%);
+                border-radius: 0.4rem;
+                padding: 0.2rem 2rem;
+                color: $white;
+            }
+
+            .card-date {
+                color: $lightblack;
+                font-size: 1.1rem;
+                font-weight: 300;
+            }
+        }
+    }
+
+    .card-especial-content {
+        padding: 0.9rem 1.1rem;
+        display: flex;
+        flex-direction: column;
+
+        .card-especial-title {
+            color: $black;
+            font-size: 1.6rem;
+            font-weight: 600;
+            text-align: left;
+        }
+
+        .card-especial-text {
+            color: $gray;
+            margin-top: 0.5rem;
+            margin-bottom: 2.5rem;
+            text-align: left;
+            font-size: 1.2rem;
+        }
+
+        .card-especial-info {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+
+            font-size: 1.2rem;
+            text-transform: uppercase;
+            font-weight: 700;
+
+            color: $black;
+
+            i {
+                color: $yellow;
+                font-size: 2rem;
+                padding-left: 0.3rem;
+            }
+        }
     }
 }
