--- a/sass/_patterns.scss
+++ b/sass/_patterns.scss
@@ -154,3 +154,35 @@ main {
         }
     }
 }
+
+.card-simple {
+    width: 100%;
+    max-width: 39.8rem;
+    min-height: 15rem;
+    box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
+    border-radius: 0.4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1.5rem;
+
+    transition: all 0.3s ease 0s;
+
+    &:hover .simple-card-text {
+        color: $lightblue;
+    }
+
+    .simple-card-img {
+        width: 60%;
+        min-height: 151px;
+        object-fit: cover;
+    }
+
+    .simple-card-text {
+        width: 40%;
+        font: italic 300 1.3rem Poppins, sans-serif;
+        padding: 0 1rem;
+        color: $black;
+    }
+}
