--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -33,44 +33,44 @@ header {
     .logo-senado img {
         max-width: 16.8rem;
     }
+}
 
-    .socials {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 1rem;
+.socials {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
 
-        a {
-            color: $white;
-            font-size: 20px;
+    a {
+        color: $white;
+        font-size: 20px;
 
-            &:hover {
-                animation: translateY 0.6s infinite alternate;
+        &:hover {
+            animation: translateY 0.6s infinite alternate;
 
-                .fa-whatsapp {
-                    color: #02df73;
-                }
-                .fa-instagram {
-                    color: #f16988;
-                }
-                .fa-twitter {
-                    color: #08a4f6;
-                }
-                .fa-youtube {
-                    color: #ff4852;
-                }
-                .fa-facebook {
-                    color: #6785d0;
-                }
-                .fa-telegram {
-                    color: #37aae5;
-                }
-                .fa-linkedin {
-                    color: #7bbcff;
-                }
-                .fa-flickr {
-                    color: #fd1a93;
-                }
+            .fa-whatsapp {
+                color: #02df73;
+            }
+            .fa-instagram {
+                color: #f16988;
+            }
+            .fa-twitter {
+                color: #08a4f6;
+            }
+            .fa-youtube {
+                color: #ff4852;
+            }
+            .fa-facebook {
+                color: #6785d0;
+            }
+            .fa-telegram {
+                color: #37aae5;
+            }
+            .fa-linkedin {
+                color: #7bbcff;
+            }
+            .fa-flickr {
+                color: #fd1a93;
             }
         }
     }
@@ -187,6 +187,7 @@ header {
 
             .dropdown-menu {
                 position: absolute;
+                z-index: 99;
                 bottom: 0;
                 width: 20rem;
                 background-color: #fff;
