--- a/sass/_patterns.scss
+++ b/sass/_patterns.scss
@@ -9,11 +9,12 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 1.5rem 0;
 
     span {
         width: 100%;
         height: 0.1rem;
-        background-color: $lightgray;
+        background-color: rgba(138, 138, 138, 23%);
     }
 
     h1 {
@@ -27,7 +28,7 @@ main {
 
 .card-news {
     width: 100%;
-    max-width: 30.5rem;
+    max-width: 26.8rem;
     box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
     border-radius: 0.4rem;
 
@@ -39,8 +40,6 @@ main {
     transition: all 0.3s ease 0s;
 
     &:hover {
-        transform: scale(1.1);
-
         .title-news {
             color: $blue;
         }
