--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -181,3 +181,44 @@
         }
     }
 }
+
+/** WEB STORIES / ESPECIALS **/
+
+.section-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.especials {
+    margin-left: 7rem;
+}
+
+.especials-area {
+    display: flex;
+    align-items: center;
+    gap: 2.2rem;
+}
+
+.swiper {
+    max-width: 25.4rem;
+    height: 384px;
+    margin-top: 3.3rem;
+    box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
+    border-radius: 0.4rem;
+
+    .swiper-slide {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+
+        img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
