--- a/sass/_patterns.scss
+++ b/sass/_patterns.scss
@@ -1,7 +1,7 @@
 @import "colors";
 
 main {
-    padding-bottom: 4rem;
+    padding-bottom: 4.5rem;
 }
 
 .title {
@@ -60,7 +60,7 @@ main {
 }
 
 .card-especial {
-    margin: 5rem 0;
+    margin-top: 3.3rem;
     width: 100%;
     max-width: 30.2rem;
     box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
@@ -129,7 +129,7 @@ main {
         .card-especial-text {
             color: $gray;
             margin-top: 0.5rem;
-            margin-bottom: 2.5rem;
+            margin-bottom: 1.8rem;
             text-align: left;
             font-size: 1.2rem;
         }
@@ -183,5 +183,26 @@ main {
         font: italic 300 1.3rem Poppins, sans-serif;
         padding: 0 1rem;
         color: $black;
+    }
+}
+
+.subtitle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 26rem;
+
+    a {
+        color: $lightblue;
+        font-weight: 300;
+        font-size: 18px;
+        text-wrap: nowrap;
+        padding-right: 0.5rem;
+    }
+
+    span {
+        width: 100%;
+        height: 0.3rem;
+        background-color: $lightblue;
     }
 }
