--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -199,26 +199,92 @@
     gap: 2.2rem;
 }
 
-.swiper {
-    max-width: 25.4rem;
-    height: 384px;
-    margin-top: 3.3rem;
-    box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
-    border-radius: 0.4rem;
+/*---- SWIPER STYLE ------*/
 
-    .swiper-slide {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
+.web-stories {
+    .swiper {
+        max-width: 25.4rem;
+        height: 384px;
+        margin-top: 3.3rem;
+        box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
+        border-radius: 0.4rem;
 
-        img {
-            display: block;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+        .swiper-slide {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+
+            img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+}
+
+/*---- SWIPER GALLERY ------*/
+.gallery {
+    margin-top: 4.6rem;
+
+    .swiper {
+        width: 100%;
+        max-width: 127.7rem;
+        height: 50rem;
+        margin-top: 2.8rem;
+        box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
+        border-radius: 0.4rem;
+
+        .swiper-slide {
+            background: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+
+            .info-container {
+                background-color: $black;
+                position: absolute;
+                width: 100%;
+                height: 6rem;
+
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                padding: 0 1.5rem;
+                font-size: 1.4rem;
+
+                a {
+                    color: $white;
+                    transition: all 0.3s ease 0s;
+
+                    &:hover {
+                        color: $lightblue;
+                    }
+                }
+            }
+
+            .top {
+                top: 0;
+                left: 0;
+            }
+
+            .bottom {
+                bottom: 0;
+                left: 0;
+                color: $white;
+
+                span {
+                    font-weight: 200;
+                    font-style: italic;
+                }
+            }
         }
     }
 }
