--- a/sass/_patterns.scss
+++ b/sass/_patterns.scss
@@ -29,8 +29,11 @@ main {
 .card-news {
     width: 100%;
     max-width: 26.8rem;
+    max-height: 245px;
+
     box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
     border-radius: 0.4rem;
+    overflow: hidden;
 
     display: flex;
     flex-direction: column;
@@ -46,14 +49,22 @@ main {
     }
 
     .img-news {
-        max-width: 30.5rem;
-        object-fit: cover;
+        width: 26.8rem;
+        height: 18.3rem;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .title-news {
+        max-width: 26.8rem;
+        height: 100%;
+        max-height: 80px;
         text-align: center;
         padding: 1rem 0.5rem;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         font-weight: 500;
         color: $black;
     }
@@ -63,6 +74,7 @@ main {
     margin-top: 3.3rem;
     width: 100%;
     max-width: 30.2rem;
+    height: 38rem;
     box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
     border-radius: 0.4rem;
 
@@ -84,7 +96,7 @@ main {
 
         .img-especial {
             max-width: 30.2rem;
-            max-height: 16rem;
+            max-height: 120px;
             object-fit: cover;
             border-top-left-radius: 0.4rem;
             border-top-right-radius: 0.4rem;
@@ -115,13 +127,18 @@ main {
     }
 
     .card-especial-content {
-        padding: 0.9rem 1.1rem;
+        padding: 0 1.1rem;
         display: flex;
         flex-direction: column;
+        align-items: flex-end;
+        justify-content: space-around;
 
         .card-especial-title {
             color: $black;
-            font-size: 1.6rem;
+            font-size: 1.5rem;
+            height: 7.5rem;
+            overflow: hidden;
+            text-overflow: ellipsis;
             font-weight: 600;
             text-align: left;
         }
@@ -129,7 +146,8 @@ main {
         .card-especial-text {
             color: $gray;
             margin-top: 0.5rem;
-            margin-bottom: 1.8rem;
+            margin-bottom: 4rem;
+            height: 60px;
             text-align: left;
             font-size: 1.2rem;
         }
