feat: menu sidebar

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -85,7 +85,7 @@ header {
     align-items: center;
     justify-content: space-between;
 
-    .menu {
+    .navbar-menu {
         display: flex;
         align-items: center;
         justify-content: center;
