--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -92,8 +92,8 @@ footer {
 }
 
 .btn-up {
-    position: absolute;
-    top: 292rem;
+    position: fixed;
+    bottom: 3rem;
     right: 3rem;
     z-index: 99;
 
@@ -111,5 +111,27 @@ footer {
 
     img {
         width: 4.2rem;
+    }
+}
+
+/************* MOBILE *****************/
+@media (max-width: 765px) {
+    .footer-top {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+
+        .col {
+            margin-bottom: 2rem;
+        }
+    }
+
+    .footer-middle,
+    .footer-bottom {
+        padding: 0 2rem;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
 }
