--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,10 +1,31 @@
 @import "header";
 
+/************* HOME *****************/
+
 .home {
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
-    gap: 4rem;
+    justify-content: space-around;
+    gap: 20px;
+    margin-bottom: 4.5rem;
+
+    .left {
+        display: flex;
+        flex-direction: column;
+
+        .cards {
+            margin-top: 2rem;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            justify-content: space-between;
+        }
+    }
+
+    .right {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .main-news {
@@ -45,7 +66,8 @@
 }
 
 .main-content {
-    max-width: 74.4rem;
+    max-width: 70.4rem;
+    padding: 0 2rem;
 
     h2 {
         font-size: 2.8rem;
@@ -65,11 +87,12 @@
     }
 }
 
+/************* TABLE *****************/
+
 .tab-content {
     display: flex;
     flex-direction: column;
     max-width: 28.4rem;
-    min-height: 24rem;
     margin-top: 2rem;
 
     box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
@@ -125,83 +148,77 @@
     }
 }
 
-/** NEWS**/
-
-.news-wrapper {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    gap: 4rem;
-
-    margin-top: 3.3rem;
-
-    .news-area {
-        display: flex;
-        align-items: center;
-        gap: 2rem;
-    }
-}
-
 .multimidia-link {
-    .multimidia {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        max-width: 28.4rem;
+    max-width: 28.4rem;
+    width: 100%;
+    margin-top: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    background-color: rgba(150, 150, 150, 15%);
+    border-radius: 0.4rem;
+    padding: 9px;
+
+    .multimidia-logo {
+        max-width: 155px;
+        padding-bottom: 10px;
+        object-fit: cover;
+    }
+
+    span {
         width: 100%;
-        background-color: rgba(150, 150, 150, 15%);
+        height: 2px;
+        background-color: $blue;
+        margin-bottom: 0.8rem;
+    }
+
+    .cover-img {
+        min-height: 128px;
+        object-fit: cover;
         border-radius: 0.4rem;
-        padding: 9px;
+        margin-bottom: 1rem;
+    }
 
-        .multimidia-logo {
-            max-width: 155px;
-            padding-bottom: 10px;
-            object-fit: cover;
-        }
+    .multimidia-text {
+        height: 46px;
+    }
 
-        span {
-            width: 100%;
-            height: 2px;
-            background-color: $blue;
-            margin-bottom: 0.8rem;
-        }
-
-        .cover-img {
-            min-height: 128px;
-            object-fit: cover;
-            border-radius: 0.4rem;
-            margin-bottom: 1rem;
-        }
-
-        p {
-            font-size: 12px;
-            font-weight: 300;
-            color: $black;
-        }
+    p {
+        font-size: 12px;
+        font-weight: 300;
+        color: $black;
     }
 }
 
-/** WEB STORIES / ESPECIALS **/
+/************* WEB STORIES/ESPECIALS *****************/
 
 .section-wrapper {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    align-items: flex-start;
+    justify-content: space-around;
+    gap: 7rem;
 }
 
 .especials {
-    margin-left: 7rem;
+    width: 100%;
 }
 
 .especials-area {
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 2.2rem;
 }
 
-/*---- SWIPER STYLE ------*/
+/************* SWIPER WEB STORY *****************/
 
 .web-stories {
+    width: 100%;
     .swiper {
         max-width: 25.4rem;
         height: 384px;
@@ -227,7 +244,7 @@
     }
 }
 
-/*---- GALLERY ------*/
+/************* SWIPER GALLERY *****************/
 .gallery {
     margin-top: 4.6rem;
 
@@ -289,7 +306,7 @@
     }
 }
 
-/*---- BILLS/STATEMENTS ------*/
+/************* BILLS/STATEMENTS *****************/
 .bills,
 .statements {
     margin-top: 4.6rem;
@@ -301,4 +318,228 @@
     align-items: center;
     gap: 4.3rem;
     margin-top: 31px;
+}
+
+/************* MOBILE *****************/
+@media (max-width: 987px) {
+    .home {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+
+        .right {
+            flex-direction: row;
+            align-items: flex-start;
+            justify-content: space-between;
+            width: 100%;
+            padding: 0 1.1rem;
+        }
+
+        .senado27 {
+            padding-right: 1rem;
+        }
+
+        .multimidia-link {
+            align-items: center;
+            justify-content: center;
+            margin-top: 0;
+            max-width: 54rem;
+            height: 415px;
+        }
+    }
+
+    .section-wrapper {
+        padding: 0 1.1rem;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: center;
+    }
+
+    .web-stories {
+        .swiper {
+            width: 100%;
+            max-width: 83rem;
+            height: 38.4rem;
+
+            .swiper-slide {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: $darkblue;
+
+                img {
+                    display: block;
+                    width: 250px;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+
+    .gallery {
+        .swiper {
+            height: 100%;
+        }
+    }
+
+    .bills-area,
+    .statements-area {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 765px) {
+    .home {
+        .cards {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .right {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .senado27 {
+            width: 100%;
+            padding-right: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            a:nth-child(1) {
+                width: 100%;
+                max-width: 54rem;
+                object-fit: cover;
+            }
+
+            .tab-content {
+                width: 100%;
+                max-width: 54rem;
+                height: 100%;
+
+                .tab-wrapper {
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    text-align: center;
+                }
+
+                .vejamais {
+                    text-align: center;
+                    margin: 10px 50px;
+                }
+            }
+        }
+
+        .multimidia-link {
+            margin-top: 3rem;
+
+            .multimidia-text {
+                margin-top: 1.5rem;
+            }
+        }
+    }
+
+    .main-content {
+        max-width: 100%;
+        padding: 2rem;
+
+        h2 {
+            font-size: 2rem;
+        }
+
+        p {
+            font-size: 1.2rem;
+        }
+    }
+
+    .section-wrapper {
+        padding: 0 1.1rem;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: center;
+    }
+
+    .web-stories {
+        .swiper {
+            max-width: 58rem;
+        }
+    }
+
+    .especials-area {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .gallery {
+        .swiper {
+            height: 100%;
+
+            .swiper-slide {
+                .info-container {
+                    height: 4rem;
+                    padding: 0 1.5rem;
+                    font-size: 1rem;
+                }
+
+                .top {
+                    top: 0;
+                    left: 0;
+                }
+
+                .bottom {
+                    bottom: 0;
+                    left: 0;
+                    color: $white;
+
+                    p {
+                        max-width: 22rem;
+                        font-size: 0.8rem;
+                    }
+
+                    span {
+                        font-weight: 200;
+                        font-style: italic;
+                    }
+                }
+            }
+
+            .swiper-button-next,
+            .swiper-button-prev {
+                display: none;
+            }
+        }
+    }
+
+    .bills-area,
+    .statements-area {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 590px) {
+    .gallery {
+        .swiper {
+            height: 100%;
+
+            .swiper-slide {
+                .info-container {
+                    height: 2rem;
+                    font-size: 0.8rem;
+                }
+
+                .bottom {
+                    display: none;
+                }
+            }
+
+            .swiper-button-next,
+            .swiper-button-prev {
+                display: none;
+            }
+        }
+    }
 }
