--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,6 +4,7 @@ footer {
     margin-top: 4.6rem;
 }
 
+/************* FOOTER TOP *************/
 .footer-top {
     display: flex;
     align-items: flex-start;
@@ -39,6 +40,7 @@ footer {
     }
 }
 
+/************* FOOTER MIDDLE *************/
 .footer-middle {
     margin-top: 2.5rem;
     display: flex;
@@ -70,6 +72,7 @@ footer {
     }
 }
 
+/************* FOOTER BOTTOM *************/
 .footer-bottom {
     display: flex;
     align-items: center;
@@ -91,11 +94,12 @@ footer {
     }
 }
 
+/************* FLOATING BUTTONS *************/
 .btn-up {
     position: fixed;
     bottom: 3rem;
     right: 3rem;
-    z-index: 99;
+    z-index: 999;
 
     i {
         font-size: 4.2rem;
@@ -114,7 +118,7 @@ footer {
     }
 }
 
-/************* MOBILE *****************/
+/************* BREAKPOINTS *************/
 @media (max-width: 765px) {
     .footer-top {
         flex-direction: column;
