--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,13 +1,13 @@
 @import "header";
 
-/************* HOME *****************/
+/************* HOME *************/
 
 .home {
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
     gap: 20px;
-    margin-bottom: 4.5rem;
+    margin-bottom: 5rem;
 
     .left {
         display: flex;
@@ -28,6 +28,7 @@
     }
 }
 
+/************* MAIN NEWS *************/
 .main-news {
     overflow: hidden;
     position: relative;
@@ -36,6 +37,7 @@
     max-width: 840px;
     max-height: 420px;
     transition: all 0.3s ease 0s;
+    box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
 
     &:hover {
         transform: scale(1.1);
@@ -87,13 +89,14 @@
     }
 }
 
-/************* TABLE *****************/
+/************* TABLE *************/
 
 .tab-content {
     display: flex;
     flex-direction: column;
-    max-width: 28.4rem;
-    margin-top: 2rem;
+    width: 100%;
+    max-width: 30rem;
+    margin-top: 0.5rem;
 
     box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
     border-radius: 0.4rem;
@@ -118,8 +121,7 @@
     .vejamais {
         color: $blue;
         font-size: 1.2rem;
-        margin-top: 20px;
-        margin-left: 195px;
+        margin: 2rem 0 1rem 20.5rem;
     }
 }
 
@@ -149,8 +151,8 @@
 }
 
 .multimidia-link {
-    max-width: 28.4rem;
     width: 100%;
+    max-width: 30rem;
     margin-top: 2rem;
 
     display: flex;
@@ -193,7 +195,7 @@
     }
 }
 
-/************* WEB STORIES/ESPECIALS *****************/
+/************* WEB STORIES *************/
 
 .section-wrapper {
     width: 100%;
@@ -203,25 +205,12 @@
     gap: 7rem;
 }
 
-.especials {
-    width: 100%;
-}
-
-.especials-area {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2.2rem;
-}
-
-/************* SWIPER WEB STORY *****************/
+/************* SWIPER WEB STORIES *************/
 
 .web-stories {
-    width: 100%;
     .swiper {
         max-width: 25.4rem;
-        height: 384px;
+        height: 38.1rem;
         margin-top: 3.3rem;
         box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 25%);
         border-radius: 0.4rem;
@@ -244,7 +233,20 @@
     }
 }
 
-/************* SWIPER GALLERY *****************/
+/************* ESPECIALS *************/
+.especials {
+    width: 100%;
+}
+
+.especials-area {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2.2rem;
+}
+
+/************* SWIPER GALLERY *************/
 .gallery {
     margin-top: 4.6rem;
 
@@ -306,7 +308,7 @@
     }
 }
 
-/************* BILLS/STATEMENTS *****************/
+/************* BILLS/STATEMENTS *************/
 .bills,
 .statements {
     margin-top: 4.6rem;
@@ -320,7 +322,7 @@
     margin-top: 31px;
 }
 
-/************* MOBILE *****************/
+/************* BREAKPOINTS *************/
 @media (max-width: 987px) {
     .home {
         width: 100%;
@@ -332,19 +334,20 @@
             align-items: flex-start;
             justify-content: space-between;
             width: 100%;
-            padding: 0 1.1rem;
+            padding-top: 2rem;
         }
 
         .senado27 {
             padding-right: 1rem;
+            max-width: 49.8rem;
         }
 
         .multimidia-link {
             align-items: center;
             justify-content: center;
             margin-top: 0;
-            max-width: 54rem;
-            height: 415px;
+            max-width: 49.8rem;
+            height: 40.8rem;
         }
     }
 
@@ -356,6 +359,7 @@
     }
 
     .web-stories {
+        width: 100%;
         .swiper {
             width: 100%;
             max-width: 83rem;
