--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,3 +1,4 @@
+/************* SIDEBAR *************/
 .sidebar {
     position: fixed;
     top: 0;
@@ -33,6 +34,7 @@
     }
 }
 
+/************* SIDEBAR MENU *************/
 .menu-content {
     position: relative;
     width: 100%;
@@ -75,6 +77,13 @@
     }
 }
 
+.menu-items {
+    width: 100%;
+    height: 100%;
+    transition: all 0.4s ease;
+}
+
+/************* SIDEBAR SUBMENU *************/
 .submenu {
     position: absolute;
     width: 100%;
@@ -112,12 +121,6 @@
 
 .show-submenu ~ .submenu {
     display: block;
-}
-
-.menu-items {
-    width: 100%;
-    height: 100%;
-    transition: all 0.4s ease;
 }
 
 .submenu-active .menu-items {
